--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # custom
 **/yolo*.pt
+*.pem
 
 # Created by https://www.toptal.com/developers/gitignore/api/flask,python,pycharm
 # Edit at https://www.toptal.com/developers/gitignore?templates=flask,python,pycharm
