--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # custom
 **/yolo*.pt
 *.pem
+memo.md
 
 # Created by https://www.toptal.com/developers/gitignore/api/flask,python,pycharm
 # Edit at https://www.toptal.com/developers/gitignore?templates=flask,python,pycharm
