--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 **/yolo*.pt
 *.pem
 memo.md
+temp/
 
 # Created by https://www.toptal.com/developers/gitignore/api/flask,python,pycharm
 # Edit at https://www.toptal.com/developers/gitignore?templates=flask,python,pycharm
